--- a/composer.json
+++ b/composer.json
@@ -17,19 +17,19 @@
         }
     ],
     "require": {
-        "php": ">=7.1",
+        "php": ">=7.2",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^7.2",
-        "illuminate/container": "8.*|7.*|6.*|5.8.*",
-        "illuminate/contracts": "8.*|7.*|6.*|5.8.*",
-        "illuminate/support": "8.*|7.*|6.*|5.8.*",
-        "illuminate/validation": "8.*|7.*|6.*|5.8.*",
+        "illuminate/container": "8.*|7.*|6.*",
+        "illuminate/contracts": "8.*|7.*|6.*",
+        "illuminate/support": "8.*|7.*|6.*",
+        "illuminate/validation": "8.*|7.*|6.*",
         "psr/http-client": "^1.0.1",
         "psr/http-message": "^1.0.1"
     },
     "require-dev": {
-        "orchestra/testbench": "6.*|5.*|4.*|3.8.*",
-        "phpunit/phpunit": "9.*|8.4.*|8.3.*|7.5.*"
+        "orchestra/testbench": "6.*|5.*|4.*",
+        "phpunit/phpunit": "9.*|8.4.*|8.3.*"
     },
     "autoload": {
         "psr-4": {
