--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,11 @@ before_script:
   - composer config discard-changes true
 
 before_install:
-  - travis_retry composer self-update
-  - travis_retry composer require "laravel/framework:${LARAVEL}" "orchestra/testbench:${TESTBENCH}" "phpunit/phpunit:${PHPUNIT}" --no-interaction --no-update
+  - composer self-update
+  - composer require "laravel/framework:${LARAVEL}" "orchestra/testbench:${TESTBENCH}" "phpunit/phpunit:${PHPUNIT}" --no-interaction --no-update
 
 install:
-  - travis_retry composer install --prefer-dist --no-interaction --no-suggest
+  - composer install --prefer-dist --no-interaction --no-suggest
 
 script:
   - vendor/bin/phpunit
