ADD - esg scores, page views, price, quote type, summary detail, & summary profile modules on summary feature | CHANGE - address1 to first address & address2 to second address on asset profile module of summary feature

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ APP_LOG_LEVEL=debug
 STOCK_PROVIDER=yahoo_finance
 
 YAHOO_FINANCE_BASE_URL=https://query1.finance.yahoo.com/
+YAHOO_FINANCE_VERSION=10
